crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__match_case.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
 --> match_case.py:3:9
  |
1 |   match 1:
2 |       case 1:
3 | /         import sys
4 | |         import os
  | |_________________^
5 |       case 2:
6 |           import collections
help: Organize imports
  |
2 |     case 1:
3 +         import os
4 |         import sys
  -         import os
5 |     case 2:

I001 [*] Import block is un-sorted or un-formatted
 --> match_case.py:6:9
4 |           import os
5 |       case 2:
6 | /         import collections
7 | |         import abc
  | |__________________^
help: Organize imports
  |
5 |     case 2:
6 +         import abc
7 |         import collections
  -         import abc
  |
