crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__skip.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> skip.py:20:5
   |
18 |       import sys
19 |       import os  # isort: skip
20 | /     import collections
21 | |     import abc
   | |______________^
help: Organize imports
   |
19 |     import os  # isort: skip
20 +     import abc
21 |     import collections
   -     import abc
22 |
   |

I001 [*] Import block is un-sorted or un-formatted
  --> skip.py:27:5
25 |       import sys
26 |       import os  # isort:skip
27 | /     import collections
28 | |     import abc
   | |______________^
help: Organize imports
   |
26 |     import os  # isort:skip
27 +     import abc
28 |     import collections
   -     import abc
29 |

I001 [*] Import block is un-sorted or un-formatted
  --> skip.py:34:5
32 |     import sys; import os  # isort:skip
33 |     import sys; import os  # isort:skip  # isort:skip
34 |     import sys; import os
   |     ^^^^^^^^^^^^^^^^^^^^^
help: Organize imports
   |
33 |     import sys; import os  # isort:skip  # isort:skip
   -     import sys; import os
34 +     import os
35 +     import sys
   |
