crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__sort_similar_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> sort_similar_imports.py:1:1
 1 | / from a import b
 2 | | from a import BAD as DEF
 3 | | from a import B
 4 | | from a import Boo as DEF
 5 | | from a import B as Abc
 6 | | from a import B as A
 7 | | from a import B as DEF
 8 | | from a import b as a
 9 | | from a import b as x
10 | | from a import b as c
11 | | from b import c
12 | | from a import b as d
13 | | from a import b as y
14 | | from b import C
15 | | from b import c as d
16 | |
17 | | import A
18 | | import a
19 | | import b
20 | | import B
21 | |
22 | | import x as y
23 | | import x as A
24 | | import x as Y
25 | | import x
26 | | import x as a
   | |_____________^
help: Organize imports
   |
   - from a import b
1  + import A
2  + import a
3  + import B
4  + import b
5  + import x
6  + import x as A
7  + import x as Y
8  + import x as a
9  + import x as y
10 | from a import BAD as DEF
   - from a import B
   - from a import Boo as DEF
11 + from a import B, b
12 + from a import B as A
13 | from a import B as Abc
   - from a import B as A
14 | from a import B as DEF
15 + from a import Boo as DEF
16 | from a import b as a
   - from a import b as x
17 | from a import b as c
   - from b import c
18 | from a import b as d
19 + from a import b as x
20 | from a import b as y
   - from b import C
21 + from b import C, c
22 | from b import c as d
   -
   - import A
   - import a
   - import b
   - import B
   -
   - import x as y
   - import x as A
   - import x as Y
   - import x
   - import x as a
   |
