crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__trailing_comment.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
I001 [*] Import block is un-sorted or un-formatted
  --> trailing_comment.py:8:1
   |
 6 |   pass
 7 |
 8 | / from mylib import (
 9 | |     MyClient,
10 | |     MyMgmtClient,
11 | | ); from foo import (
12 | |     bar
13 | | )# some comment
   | |_^
14 |
15 |   pass
help: Organize imports
   |
7  |
8  + from foo import bar  # some comment
9  | from mylib import (
10 |     MyClient,
11 |     MyMgmtClient,
   - ); from foo import (
   -     bar
   - )# some comment
12 + )
13 |
   |

I001 [*] Import block is un-sorted or un-formatted
  --> trailing_comment.py:17:1
   |
15 |   pass
16 |
17 | / from foo import (
18 | |     bar
19 | | )
20 | | from mylib import (
21 | |     MyClient,
22 | |     MyMgmtClient,
23 | |     # some comment
24 | | )
   | |_^
25 |
26 |   pass
help: Organize imports
   |
16 |
   - from foo import (
   -     bar
   - )
17 + from foo import bar
18 | from mylib import (
   |

I001 [*] Import block is un-sorted or un-formatted
  --> trailing_comment.py:35:1
   |
33 |   pass
34 |
35 | / from mylib import (
36 | |     MyClient
37 | |     # some comment
38 | | )
   | |_^
39 |
40 |   pass
help: Organize imports
   |
34 |
   - from mylib import (
   -     MyClient
   -     # some comment
   - )
35 + from mylib import MyClient  # some comment
36 |
   |

I001 [*] Import block is un-sorted or un-formatted
  --> trailing_comment.py:42:1
   |
40 |   pass
41 |
42 | / from mylib import (
43 | |     # some comment
44 | |     MyClient
45 | | )
   | |_^
46 |
47 |   pass
help: Organize imports
41 |
   - from mylib import (
   -     # some comment
   -     MyClient
   - )
42 + from mylib import MyClient  # some comment
43 |
   |

I001 [*] Import block is un-sorted or un-formatted
  --> trailing_comment.py:50:1
   |
49 |   # a
50 | / from mylib import ( # b
51 | |     # c
52 | |     MyClient # d
53 | |     # e
54 | | ) # f
   | |_^
help: Organize imports
   |
49 | # a
   - from mylib import ( # b
   -     # c
   -     MyClient # d
   -     # e
   - ) # f
50 + from mylib import MyClient  # b  # c  # d  # e  # f
   |
